// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders AddItem 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#1e88e5",
      "borderRadius": 30,
      "bottom": 0,
      "height": 60,
      "justifyContent": "center",
      "marginTop": 25,
      "width": 60,
    }
  }
>
  <View>
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#fff",
              "fontSize": 35,
            },
            undefined,
            Object {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders Icon 1`] = `
<View>
  <View
    accessible={true}
    collapsable={false}
    focusable={false}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        Array [
          Object {
            "color": undefined,
            "fontSize": 12,
          },
          undefined,
          Object {
            "fontFamily": "Material Icons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          Object {},
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`renders Input 1`] = `
<View
  style={
    Object {
      "margin": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#000",
      }
    }
  />
  <TextInput
    multiline={true}
    style={
      Array [
        Object {
          "backgroundColor": "#fff",
          "borderRadius": 5,
          "elevation": 2,
          "height": 45,
          "marginVertical": 5,
        },
        Object {},
      ]
    }
  />
</View>
`;

exports[`renders customButton 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#1e88e5",
        "borderRadius": 5,
        "height": 45,
        "justifyContent": "center",
        "margin": 10,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#fff",
        }
      }
    >
      Add Character
    </Text>
  </View>
</View>
`;

exports[`renders seperator 1`] = `
<View
  style={
    Object {
      "borderBottomColor": "#0001",
      "borderBottomWidth": 1,
    }
  }
/>
`;
